--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik+Beastly&family=Supermercado+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rubik+Beastly&family=Supermercado+One&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header> 
