--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<header> 
 		<h1> Commitment HW </h1>
 	</header>
+	<div class="w3-panel w3-red">
+  <h3>Danger!</h3>
+  <p>Red often indicates a dangerous or negative situation.</p>
+</div>
 	<p>
 		I have no idea what to commit 100 times
 	</p>
