--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
   <p>Click on the X to close this panel.</p>
 </div>
 
+<div class="w3-panel w3-border">
+  <p>My borders are normal.</p>
+</div>
+
 </body>
 </html>
