adding another border

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
   <p>My borders are normal.</p>
 </div>
 
+<div class="w3-panel w3-border w3-round-small">
+  <p>My borders are rounded (small).</p>
+</div>
+
 </body>
 </html>
