--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
   <p>My borders are rounded (small).</p>
 </div>
 
+<div class="w3-panel w3-border w3-round">
+  <p>My borders are rounded.</p>
+</div>
+
 </body>
 </html>
