--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
   <p>My borders are rounded.</p>
 </div>
 
+<div class="w3-panel w3-border w3-round-large">
+  <p>I have large rounded borders.</p>
+</div>
+
 </body>
 </html>
