--- a/index.html
+++ b/index.html
@@ -46,5 +46,9 @@
   <p>I have large rounded borders.</p>
 </div>
 
+<div class="w3-panel w3-border w3-round-xlarge">
+  <p>I have xlarge rounded borders.</p>
+</div>
+
 </body>
 </html>
