--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		I have no idea what to commit 100 times
 	</p>
 
+<h2> What is color? </h2>
 	<button class="w3-btn" onclick="document.getElementById('id01').style.display='block'">Show panel</button>
 
 <div id="id01" class="w3-panel w3-green w3-display-container" style="display:none">
