--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 <h2> What is color? </h2>
 	<button class="w3-btn" onclick="document.getElementById('id01').style.display='block'">Show panel</button>
 
-	
+	<div id="id01" class="w3-panel w3-green w3-display-container" style="display:none">
+	  <span onclick="this.parentElement.style.display='none'"
+	  class="w3-button w3-display-topright">X</span>
+	  <p>Click on the X to close this panel.</p>
+	  <p>Click on the X to close this panel.</p>
+	</div>
+
 
 </body>
 </html>
